# JS-in-C

./: .gitignore  CMakeLists.txt  Interpreter.cpp  Interpreter.h  Lex.cpp  Lex.h  README.md  TinyJS.cpp  TinyJS.exe.stackdump  TinyJS.h  lex_test.cpp  main.cpp  var.cpp  var.h  var_test.cpp
Test4JS/: 1.js  2.js  array.js  closure.js  eval.js  json.js  recursion.js  res.txt  test1.js  this_and_new.js  tokens.txt  var.js
js_in_c_lex/: Lex.cpp  Lex.hpp  main.cpp
js_in_c_lexer/: main.cpp
js_in_c_lexer.xcodeproj/: project.pbxproj
js_in_c_lexer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
js_in_c_lexer.xcodeproj/xcuserdata/laoreja.xcuserdatad/xcschemes/: js_in_c_lexer.xcscheme  xcschememanagement.plist
